--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="styles/material.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- endbuild -->
   </head>
   <body>
@@ -16,7 +17,6 @@
         <md-content class="md-padding-all">
           <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
             <md-nav-item md-nav-href="#/" name="#/">Projects</md-nav-item>
-            <md-nav-item md-nav-href="#/search" name="#/search">Search</md-nav-item>
             <md-nav-item md-nav-href="#/about" name="#/about">About</md-nav-item>
           </md-nav-bar>
         </md-content>
@@ -26,6 +26,7 @@
           <div ng-view=""></div>
         </div>
       </main>
+
       <footer>
           <div layout="row" layout-align="center">
               <h3>Thanks to ...</h2>
@@ -45,6 +46,7 @@
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/angular-dragula/dist/angular-dragula.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
