use service and state ui-routing

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,9 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/service/project.js"></script>
+    <script src="scripts/controllers/projects.js"></script>
+    <!--script src="scripts/controllers/projectdetail.js"></script-->
     <script src="scripts/controllers/about.js"></script>
     <!-- endbuild -->
 </body>
